force-app/main/default/objects/Zoom_Event_Info__c/fields/Log_Out__c.field-meta.xml
<CustomField>
    <fullName>Log_Out__c</fullName>
    <label>Log Out</label>
    <type>DateTime</type>
</CustomField>