force-app/main/default/objects/Zoom_Event_Info__c/fields/Presence_status__c.field-meta.xml
<CustomField>
    <fullName>Presence_status__c</fullName>
    <label>Presence Status</label>
    <length>25</length>
    <type>Text</type>
</CustomField>