force-app/main/default/objects/Zoom_Event_Info__c/fields/Zoom_Users_Info__c.field-meta.xml
<CustomField>
    <fullName>Zoom_Users_Info__c</fullName>
    <label>Zoom Users Info</label>
    <referenceTo>Zoom_Users_Info__c</referenceTo>
    <relationshipLabel>Zoom Event Infos</relationshipLabel>
    <relationshipName>Zoom_Event_Infos</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>